@@ -1,5 +1,5 @@
 Package: clustMixType
-Version: 0.4-00
+Version: 0.4-1
 Date: 2024-06-24
 Title: k-Prototypes Clustering for Mixed Variable-Type Data
 Author: Gero Szepannek [aut, cre], Rabea Aschenbruck [aut]
