@@ -1,6 +1,6 @@
 context("clustervalidation - basic tests.\n")
 
-library(clustMixType)
+#library(clustMixType)
 
 # generate test data
 set.seed(42)
@@ -42,19 +42,19 @@ test_that("checking input objects",{
   #input method
   expect_error(validation_kproto(method = "other index", object = 2, verbose = FALSE))
   expect_error(validation_kproto(method = "cindex", object = 2, verbose = FALSE))
-  
+
   # input data
   expect_error(validation_kproto(method = "cindex", data = NULL, verbose = FALSE))
   expect_error(validation_kproto(method = "cindex", data = data.frame("a" = 2,"b" = 2), verbose = FALSE))
   expect_error(validation_kproto(method = "cindex", data = data.frame("a" = c(2, 2)), verbose = FALSE))
-  
+
   # input k
   expect_error(validation_kproto(method = "cindex", data = x_num_cat, k = 4, verbose = FALSE))
   expect_error(validation_kproto(method = "cindex", data = x_num_cat, k = -1:3, verbose = FALSE))
   expect_error(validation_kproto(method = "cindex", data = x_num_cat, k = 5:43, verbose = FALSE))
   expect_error(validation_kproto(method = "cindex", data = x_num_cat, k = 1, verbose = FALSE))
   expect_error(validation_kproto(method = "cindex", data = x_num_cat, k = 1:3, verbose = FALSE))
-  
+
   #input object
   expect_error(validation_kproto(method = "cindex", data = NULL, object = kpres_nc_huang_wo, verbose = FALSE))
   expect_error(validation_kproto(method = "cindex", data = NULL, object = kpres_nco_gower_wo, verbose = FALSE))
@@ -73,13 +73,13 @@ ivk_nc_huang <- validation_kproto(method = "cindex", data = x_num_cat, k = c(3:4
 ivk_nc_gower <- validation_kproto(method = "cindex", data = x_num_cat, k = c(3:4), verbose = FALSE, type = "gower")
 ivk_nco_gower <- validation_kproto(method = "cindex", data = x_num_cat_ord, k = c(3:4), verbose = FALSE, type = "gower")
 
-ivk_l_nc <- validation_kproto(method = "cindex", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nc <- validation_kproto(method = "cindex", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal',
                                    lambda = 2, verbose = FALSE, type = "huang")
-ivk_l_nco <- validation_kproto(method = "cindex", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nco <- validation_kproto(method = "cindex", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal',
                                        lambda = 2, verbose = FALSE, type = "gower")
-ivk_huang_c <- validation_kproto(method = "cindex", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_c <- validation_kproto(method = "cindex", object = NULL, data = x_num_cat, k = c(3:4),
                                         lambda = c(1,1,0,0), kp_obj = 'optimal', verbose = FALSE, type = "huang")
-ivk_huang_n <- validation_kproto(method = "cindex", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_n <- validation_kproto(method = "cindex", object = NULL, data = x_num_cat, k = c(3:4),
                                         lambda = c(0,0,1,1), kp_obj = 'optimal', verbose = FALSE, type = "huang")
 
 
@@ -100,7 +100,7 @@ test_that("resulting objects based on cindex are as expected",{
   expect_true(length(iv_nco_gower) == 1)
   expect_true(iv_nco_gower > 0)
   expect_true(iv_nco_gower < 1)
-  
+
   ###determination index-optimal k
   #nc_huang
   expect_is(ivk_nc_huang[[1]], "integer")
@@ -126,7 +126,7 @@ test_that("resulting objects based on cindex are as expected",{
   expect_true(is.numeric(ivk_nco_gower[[3]]))
   expect_true(length(ivk_nco_gower[[3]]) <= 3)
   expect_equal(ivk_nco_gower[[1]], as.integer(names(which.min(ivk_nco_gower[[3]]))))
-  
+
   #checking lambda
   expect_equal(ivk_l_nc$kp_obj$lambda, 2)
   expect_equal(ivk_l_nco$kp_obj$lambda, NULL)
@@ -145,13 +145,13 @@ ivk_nc_huang <- validation_kproto(method = "dunn", data = x_num_cat, k = c(3:4),
 ivk_nc_gower <- validation_kproto(method = "dunn", data = x_num_cat, k = c(3:4), verbose = FALSE, type = "gower")
 ivk_nco_gower <- validation_kproto(method = "dunn", data = x_num_cat_ord, k = c(3:4), verbose = FALSE, type = "gower")
 
-ivk_l_nc <- validation_kproto(method = "dunn", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nc <- validation_kproto(method = "dunn", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal',
                               lambda = 2, verbose = FALSE, type = "huang")
-ivk_l_nco <- validation_kproto(method = "dunn", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nco <- validation_kproto(method = "dunn", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal',
                                lambda = 2, verbose = FALSE, type = "gower")
-ivk_huang_c <- validation_kproto(method = "dunn", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_c <- validation_kproto(method = "dunn", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(1,1,0,0), kp_obj = 'optimal', verbose = FALSE, type = "huang")
-ivk_huang_n <- validation_kproto(method = "dunn", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_n <- validation_kproto(method = "dunn", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(0,0,1,1), kp_obj = 'optimal', verbose = FALSE, type = "huang")
 
 
@@ -169,7 +169,7 @@ test_that("resulting objects based on dunn index are as expected",{
   expect_is(iv_nco_gower, "numeric")
   expect_true(length(iv_nco_gower) == 1)
   expect_true(iv_nco_gower >= 0)
-  
+
   ###determination index-optimal k
   #nc_huang
   expect_is(ivk_nc_huang[[1]], "integer")
@@ -195,7 +195,7 @@ test_that("resulting objects based on dunn index are as expected",{
   expect_true(is.numeric(ivk_nco_gower[[3]]))
   expect_true(length(ivk_nco_gower[[3]]) <= 3)
   expect_equal(ivk_nco_gower[[1]], as.integer(names(which.max(ivk_nco_gower[[3]]))))
-  
+
   #checking lambda
   expect_equal(ivk_l_nc$kp_obj$lambda, 2)
   expect_equal(ivk_l_nco$kp_obj$lambda, NULL)
@@ -214,13 +214,13 @@ ivk_nc_huang <- validation_kproto(method = "gamma", data = x_num_cat, k = c(3:4)
 ivk_nc_gower <- validation_kproto(method = "gamma", data = x_num_cat, k = c(3:4), verbose = FALSE, type = "gower")
 ivk_nco_gower <- validation_kproto(method = "gamma", data = x_num_cat_ord, k = c(3:4), verbose = FALSE, type = "gower")
 
-ivk_l_nc <- validation_kproto(method = "gamma", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nc <- validation_kproto(method = "gamma", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal',
                               lambda = 2, verbose = FALSE, type = "huang")
-ivk_l_nco <- validation_kproto(method = "gamma", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nco <- validation_kproto(method = "gamma", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal',
                                lambda = 2, verbose = FALSE, type = "gower")
-ivk_huang_c <- validation_kproto(method = "gamma", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_c <- validation_kproto(method = "gamma", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(1,1,0,0), kp_obj = 'optimal', verbose = FALSE, type = "huang")
-ivk_huang_n <- validation_kproto(method = "gamma", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_n <- validation_kproto(method = "gamma", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(0,0,1,1), kp_obj = 'optimal', verbose = FALSE, type = "huang")
 
 test_that("resulting objects based on gamma index are as expected",{
@@ -240,7 +240,7 @@ test_that("resulting objects based on gamma index are as expected",{
   expect_true(length(iv_nco_gower) == 1)
   expect_true(iv_nco_gower > -1)
   expect_true(iv_nco_gower <= 1)
-  
+
   ###determination index-optimal k
   #nc_huang
   expect_is(ivk_nc_huang[[1]], "integer")
@@ -266,7 +266,7 @@ test_that("resulting objects based on gamma index are as expected",{
   expect_true(is.numeric(ivk_nco_gower[[3]]))
   expect_true(length(ivk_nco_gower[[3]]) <= 3)
   expect_equal(ivk_nco_gower[[1]], as.integer(names(which.max(ivk_nco_gower[[3]]))))
-  
+
   #checking lambda
   expect_equal(ivk_l_nc$kp_obj$lambda, 2)
   expect_equal(ivk_l_nco$kp_obj$lambda, NULL)
@@ -285,13 +285,13 @@ ivk_nc_huang <- validation_kproto(method = "gplus", data = x_num_cat, k = c(3:4)
 ivk_nc_gower <- validation_kproto(method = "gplus", data = x_num_cat, k = c(3:4), verbose = FALSE, type = "gower")
 ivk_nco_gower <- validation_kproto(method = "gplus", data = x_num_cat_ord, k = c(3:4), verbose = FALSE, type = "gower")
 
-ivk_l_nc <- validation_kproto(method = "gplus", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nc <- validation_kproto(method = "gplus", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal',
                               lambda = 2, verbose = FALSE, type = "huang")
-ivk_l_nco <- validation_kproto(method = "gplus", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nco <- validation_kproto(method = "gplus", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal',
                                lambda = 2, verbose = FALSE, type = "gower")
-ivk_huang_c <- validation_kproto(method = "gplus", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_c <- validation_kproto(method = "gplus", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(1,1,0,0), kp_obj = 'optimal', verbose = FALSE, type = "huang")
-ivk_huang_n <- validation_kproto(method = "gplus", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_n <- validation_kproto(method = "gplus", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(0,0,1,1), kp_obj = 'optimal', verbose = FALSE, type = "huang")
 
 test_that("resulting objects based on gplus index are as expected",{
@@ -311,7 +311,7 @@ test_that("resulting objects based on gplus index are as expected",{
   expect_true(length(iv_nco_gower) == 1)
   expect_true(iv_nco_gower >= 0)
   expect_true(iv_nco_gower < 1)
-  
+
   ###determination index-optimal k
   #nc_huang
   expect_is(ivk_nc_huang[[1]], "integer")
@@ -337,7 +337,7 @@ test_that("resulting objects based on gplus index are as expected",{
   expect_true(is.numeric(ivk_nco_gower[[3]]))
   expect_true(length(ivk_nco_gower[[3]]) <= 3)
   expect_equal(ivk_nco_gower[[1]], as.integer(names(which.min(ivk_nco_gower[[3]]))))
-  
+
   #checking lambda
   expect_equal(ivk_l_nc$kp_obj$lambda, 2)
   expect_equal(ivk_l_nco$kp_obj$lambda, NULL)
@@ -356,6 +356,7 @@ ivk_nc_huang <- validation_kproto(method = "mcclain", data = x_num_cat, k = c(3:
 ivk_nc_gower <- validation_kproto(method = "mcclain", data = x_num_cat, k = c(3:4), verbose = FALSE, type = "gower")
 ivk_nco_gower <- validation_kproto(method = "mcclain", data = x_num_cat_ord, k = c(3:4), verbose = FALSE, type = "gower")
 
+set.seed(42)
 ivk_l_nc <- validation_kproto(method = "mcclain", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal', 
                               lambda = 2, verbose = FALSE, type = "huang")
 ivk_l_nco <- validation_kproto(method = "mcclain", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal', 
@@ -424,13 +425,13 @@ ivk_nc_huang <- validation_kproto(method = "ptbiserial", data = x_num_cat, k = c
 ivk_nc_gower <- validation_kproto(method = "ptbiserial", data = x_num_cat, k = c(3:4), verbose = FALSE, type = "gower")
 ivk_nco_gower <- validation_kproto(method = "ptbiserial", data = x_num_cat_ord, k = c(3:4), verbose = FALSE, type = "gower")
 
-ivk_l_nc <- validation_kproto(method = "ptbiserial", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nc <- validation_kproto(method = "ptbiserial", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal',
                               lambda = 2, verbose = FALSE, type = "huang")
-ivk_l_nco <- validation_kproto(method = "ptbiserial", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nco <- validation_kproto(method = "ptbiserial", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal',
                                lambda = 2, verbose = FALSE, type = "gower")
-ivk_huang_c <- validation_kproto(method = "ptbiserial", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_c <- validation_kproto(method = "ptbiserial", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(1,1,0,0), kp_obj = 'optimal', verbose = FALSE, type = "huang")
-ivk_huang_n <- validation_kproto(method = "ptbiserial", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_n <- validation_kproto(method = "ptbiserial", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(0,0,1,1), kp_obj = 'optimal', verbose = FALSE, type = "huang")
 
 test_that("resulting objects based on ptbiserial index are as expected",{
@@ -444,7 +445,7 @@ test_that("resulting objects based on ptbiserial index are as expected",{
   #nco_gower
   expect_is(iv_nco_gower, "numeric")
   expect_true(length(iv_nco_gower) == 1)
-  
+
   ###determination index-optimal k
   #nc_huang
   expect_is(ivk_nc_huang[[1]], "integer")
@@ -470,7 +471,7 @@ test_that("resulting objects based on ptbiserial index are as expected",{
   expect_true(is.numeric(ivk_nco_gower[[3]]))
   expect_true(length(ivk_nco_gower[[3]]) <= 3)
   expect_equal(ivk_nco_gower[[1]], as.integer(names(which.max(ivk_nco_gower[[3]]))))
-  
+
   #checking lambda
   expect_equal(ivk_l_nc$kp_obj$lambda, 2)
   expect_equal(ivk_l_nco$kp_obj$lambda, NULL)
@@ -489,13 +490,13 @@ ivk_nc_huang <- validation_kproto(method = "silhouette", data = x_num_cat, k = c
 ivk_nc_gower <- validation_kproto(method = "silhouette", data = x_num_cat, k = c(3:4), verbose = FALSE, type = "gower")
 ivk_nco_gower <- validation_kproto(method = "silhouette", data = x_num_cat_ord, k = c(3:4), verbose = FALSE, type = "gower")
 
-ivk_l_nc <- validation_kproto(method = "silhouette", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nc <- validation_kproto(method = "silhouette", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal',
                               lambda = 2, verbose = FALSE, type = "huang")
-ivk_l_nco <- validation_kproto(method = "silhouette", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nco <- validation_kproto(method = "silhouette", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal',
                                lambda = 2, verbose = FALSE, type = "gower")
-ivk_huang_c <- validation_kproto(method = "silhouette", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_c <- validation_kproto(method = "silhouette", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(1,1,0,0), kp_obj = 'optimal', verbose = FALSE, type = "huang")
-ivk_huang_n <- validation_kproto(method = "silhouette", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_n <- validation_kproto(method = "silhouette", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(0,0,1,1), kp_obj = 'optimal', verbose = FALSE, type = "huang")
 
 test_that("resulting objects based on silhouette index are as expected",{
@@ -515,7 +516,7 @@ test_that("resulting objects based on silhouette index are as expected",{
   expect_true(length(iv_nco_gower) == 1)
   expect_true(iv_nco_gower >= -1)
   expect_true(iv_nco_gower <= 1)
-  
+
   ###determination index-optimal k
   #nc_huang
   expect_is(ivk_nc_huang[[1]], "integer")
@@ -541,7 +542,7 @@ test_that("resulting objects based on silhouette index are as expected",{
   expect_true(is.numeric(ivk_nco_gower[[3]]))
   expect_true(length(ivk_nco_gower[[3]]) <= 3)
   expect_equal(ivk_nco_gower[[1]], as.integer(names(which.max(ivk_nco_gower[[3]]))))
-  
+
   #checking lambda
   expect_equal(ivk_l_nc$kp_obj$lambda, 2)
   expect_equal(ivk_l_nco$kp_obj$lambda, NULL)
@@ -560,13 +561,13 @@ ivk_nc_huang <- validation_kproto(method = "tau", data = x_num_cat, k = c(3:4), 
 ivk_nc_gower <- validation_kproto(method = "tau", data = x_num_cat, k = c(3:4), verbose = FALSE, type = "gower")
 ivk_nco_gower <- validation_kproto(method = "tau", data = x_num_cat_ord, k = c(3:4), verbose = FALSE, type = "gower")
 
-ivk_l_nc <- validation_kproto(method = "tau", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nc <- validation_kproto(method = "tau", object = NULL, data = x_num_cat, k = c(3:4), kp_obj = 'optimal',
                               lambda = 2, verbose = FALSE, type = "huang")
-ivk_l_nco <- validation_kproto(method = "tau", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal', 
+ivk_l_nco <- validation_kproto(method = "tau", object = NULL, data = x_num_cat_ord, k = c(3:4), kp_obj = 'optimal',
                                lambda = 2, verbose = FALSE, type = "gower")
-ivk_huang_c <- validation_kproto(method = "tau", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_c <- validation_kproto(method = "tau", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(1,1,0,0), kp_obj = 'optimal', verbose = FALSE, type = "huang")
-ivk_huang_n <- validation_kproto(method = "tau", object = NULL, data = x_num_cat, k = c(3:4), 
+ivk_huang_n <- validation_kproto(method = "tau", object = NULL, data = x_num_cat, k = c(3:4),
                                  lambda = c(0,0,1,1), kp_obj = 'optimal', verbose = FALSE, type = "huang")
 
 test_that("resulting objects based on tau index are as expected",{
@@ -586,7 +587,7 @@ test_that("resulting objects based on tau index are as expected",{
   expect_true(length(iv_nco_gower) == 1)
   expect_true(iv_nco_gower >= -1)
   expect_true(iv_nco_gower <= 1)
-  
+
   ###determination index-optimal k
   #nc_huang
   expect_is(ivk_nc_huang[[1]], "integer")
@@ -612,7 +613,7 @@ test_that("resulting objects based on tau index are as expected",{
   expect_true(is.numeric(ivk_nco_gower[[3]]))
   expect_true(length(ivk_nco_gower[[3]]) <= 3)
   expect_equal(ivk_nco_gower[[1]], as.integer(names(which.max(ivk_nco_gower[[3]]))))
-  
+
   #checking lambda
   expect_equal(ivk_l_nc$kp_obj$lambda, 2)
   expect_equal(ivk_l_nco$kp_obj$lambda, NULL)
@@ -637,7 +638,7 @@ test_that("checking input objects of stability_kproto",{
   expect_error(stability_kproto(method = c("luxburg", "jaccard"), object = 42, verbose = FALSE))
   expect_error(stability_kproto(method = "jaccard", object = kpres_nc_huang_wo, verbose = FALSE))
   expect_error(stability_kproto(method = "jaccard", object = kpres_nc_huang, verbose = FALSE, B = "forty-two"))
-  
+
 }
 )
 
@@ -652,13 +653,13 @@ stab_4_nc_gower  <- stability_kproto(method = c("luxburg", "rand", "fowlkesmallo
 stab_4_nco_gower  <- stability_kproto(method = c("luxburg", "rand", "fowlkesmallows", "jaccard"), object = kpres_nco_gower, verbose = FALSE)
 
 test_that("resulting stability objects are as expected",{
-  
+
   #nc_huang
   expect_is(stab_1_nc_huang, "list")
   expect_true(length(stab_1_nc_huang) == 2)
   expect_true(length(stab_2_nc_huang) == 2)
   expect_true(length(stab_4_nc_huang) == 2)
-  
+
   expect_is(stab_1_nc_huang[[1]], "numeric")
   expect_true(length(stab_1_nc_huang[[1]]) == 1)
   expect_true(length(stab_2_nc_huang[[1]]) == 2)
@@ -667,33 +668,33 @@ test_that("resulting stability objects are as expected",{
   expect_true(dim(stab_1_nc_huang[[2]])[[2]] == 2)
   expect_true(dim(stab_2_nc_huang[[2]])[[2]] == 3)
   expect_true(dim(stab_4_nc_huang[[2]])[[2]] == 5)
-  
+
   #nc_gower
   expect_is(stab_1_nc_gower, "list")
   expect_true(length(stab_1_nc_gower) == 2)
   expect_true(length(stab_2_nc_gower) == 2)
   expect_true(length(stab_4_nc_gower) == 2)
-  
+
   expect_is(stab_1_nc_gower[[1]], "numeric")
   expect_true(length(stab_1_nc_gower[[1]]) == 1)
   expect_true(length(stab_2_nc_gower[[1]]) == 2)
   expect_true(length(stab_4_nc_gower[[1]]) == 4)
-  
+
   expect_true(dim(stab_1_nc_gower[[2]])[[2]] == 2)
   expect_true(dim(stab_2_nc_gower[[2]])[[2]] == 3)
   expect_true(dim(stab_4_nc_gower[[2]])[[2]] == 5)
-  
+
   #nco_gower
   expect_is(stab_1_nco_gower, "list")
   expect_true(length(stab_1_nco_gower) == 2)
   expect_true(length(stab_2_nco_gower) == 2)
   expect_true(length(stab_4_nco_gower) == 2)
-  
+
   expect_is(stab_1_nco_gower[[1]], "numeric")
   expect_true(length(stab_1_nco_gower[[1]]) == 1)
   expect_true(length(stab_2_nco_gower[[1]]) == 2)
   expect_true(length(stab_4_nco_gower[[1]]) == 4)
-  
+
   expect_true(dim(stab_1_nco_gower[[2]])[[2]] == 2)
   expect_true(dim(stab_2_nco_gower[[2]])[[2]] == 3)
   expect_true(dim(stab_4_nco_gower[[2]])[[2]] == 5)
